--- a/bin/addons/base/i18n/is.po
+++ b/bin/addons/base/i18n/is.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-01-19 13:31+0000\n"
-"Last-Translator: Fabien (Open ERP) <fp@tinyerp.com>\n"
+"PO-Revision-Date: 2012-05-11 00:30+0000\n"
+"Last-Translator: Bjorn Thor <Unknown>\n"
 "Language-Team: Icelandic <is@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-08 05:26+0000\n"
-"X-Generator: Launchpad (build 15204)\n"
+"X-Launchpad-Export-Date: 2012-05-11 05:29+0000\n"
+"X-Generator: Launchpad (build 15225)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -24,7 +24,7 @@ msgstr ""
 #: field:ir.rule,domain_force:0
 #: field:res.partner.title,domain:0
 msgid "Domain"
-msgstr ""
+msgstr "Lén"
 
 #. module: base
 #: model:res.country,name:base.sh
@@ -39,7 +39,7 @@ msgstr ""
 #. module: base
 #: selection:ir.property,type:0
 msgid "DateTime"
-msgstr ""
+msgstr "DagsTími"
 
 #. module: base
 #: code:addons/fields.py:582
@@ -53,7 +53,7 @@ msgstr ""
 #: view:ir.values:0
 #: field:ir.values,meta_unpickle:0
 msgid "Metadata"
-msgstr ""
+msgstr "Metagögn"
 
 #. module: base
 #: field:ir.ui.view,arch:0
@@ -79,7 +79,7 @@ msgstr ""
 #. module: base
 #: view:partner.sms.send:0
 msgid "SMS - Gateway: clickatell"
-msgstr ""
+msgstr "SMS - Gátt: clickatell"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -211,7 +211,7 @@ msgstr ""
 #: code:addons/base/res/res_user.py:132
 #, python-format
 msgid "\"smtp_server\" needs to be set to send mails to users"
-msgstr ""
+msgstr "stilla þarf SMTP þjón til að geta sent fjöldapóst."
 
 #. module: base
 #: code:addons/base/module/wizard/base_export_language.py:60
@@ -244,7 +244,7 @@ msgstr ""
 #: field:res.partner,subname:0
 #: field:res.partner.address,name:0
 msgid "Contact Name"
-msgstr ""
+msgstr "Nafn tengiliðs"
 
 #. module: base
 #: code:addons/base/module/wizard/base_export_language.py:56
@@ -257,7 +257,7 @@ msgstr ""
 #. module: base
 #: sql_constraint:res.lang:0
 msgid "The name of the language must be unique !"
-msgstr ""
+msgstr "Nafn tungumáls verður að vera einstakt !"
 
 #. module: base
 #: selection:res.request,state:0
@@ -349,7 +349,7 @@ msgstr ""
 #: field:res.bank,email:0
 #: field:res.partner.address,email:0
 msgid "E-Mail"
-msgstr ""
+msgstr "Netfang"
 
 #. module: base
 #: model:res.country,name:base.an
@@ -411,7 +411,7 @@ msgstr ""
 #. module: base
 #: field:res.country,name:0
 msgid "Country Name"
-msgstr ""
+msgstr "Nafn Lands"
 
 #. module: base
 #: model:res.country,name:base.co
@@ -444,7 +444,7 @@ msgstr ""
 #. module: base
 #: view:res.partner:0
 msgid "Sales & Purchases"
-msgstr ""
+msgstr "Sala og Innkaup"
 
 #. module: base
 #: view:ir.translation:0
@@ -526,7 +526,7 @@ msgstr ""
 #: view:res.config:0
 #: view:res.config.installer:0
 msgid "description"
-msgstr ""
+msgstr "lýsing"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_base_action_rule
@@ -1080,7 +1080,7 @@ msgstr ""
 #. module: base
 #: field:res.payterm,name:0
 msgid "Payment Term (short name)"
-msgstr ""
+msgstr "Greiðslu skilmálar (stutt nafn)"
 
 #. module: base
 #: model:ir.model,name:base.model_res_bank
@@ -1704,7 +1704,7 @@ msgstr ""
 #. module: base
 #: field:ir.ui.view_sc,name:0
 msgid "Shortcut Name"
-msgstr ""
+msgstr "Nafn flýtivísunar"
 
 #. module: base
 #: help:ir.actions.act_window,limit:0
@@ -1736,7 +1736,7 @@ msgstr ""
 #. module: base
 #: field:ir.actions.server,email:0
 msgid "Email Address"
-msgstr ""
+msgstr "Netfang"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -2056,7 +2056,7 @@ msgstr ""
 #. module: base
 #: field:res.partner.address,partner_id:0
 msgid "Partner Name"
-msgstr ""
+msgstr "Nafn viðskiptar aðila"
 
 #. module: base
 #: field:workflow.activity,signal_send:0
@@ -2149,7 +2149,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:base.action_partner_title_contact
 #: model:ir.ui.menu,name:base.menu_partner_title_contact
 msgid "Contact Titles"
-msgstr ""
+msgstr "Titill tengiliðs"
 
 #. module: base
 #: view:base.language.import:0
@@ -2272,7 +2272,7 @@ msgstr ""
 #: field:res.partner.event,description:0
 #: view:res.request:0
 msgid "Description"
-msgstr ""
+msgstr "Lýsing"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_workflow_instance_form
@@ -2320,7 +2320,7 @@ msgstr ""
 #: model:ir.model,name:base.model_partner_massmail_wizard
 #: view:partner.massmail.wizard:0
 msgid "Mass Mailing"
-msgstr ""
+msgstr "Fjöldapóstur"
 
 #. module: base
 #: model:res.country,name:base.yt
@@ -2427,7 +2427,7 @@ msgstr ""
 #. module: base
 #: field:res.company,name:0
 msgid "Company Name"
-msgstr ""
+msgstr "Nafn fyrirtækis"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_country
@@ -2464,7 +2464,7 @@ msgstr ""
 #. module: base
 #: field:res.partner,vat:0
 msgid "VAT"
-msgstr ""
+msgstr "VSK"
 
 #. module: base
 #: view:res.lang:0
@@ -2634,7 +2634,7 @@ msgstr ""
 #. module: base
 #: field:ir.actions.act_window,help:0
 msgid "Action description"
-msgstr ""
+msgstr "Lýsing aðgerðar"
 
 #. module: base
 #: help:res.partner,customer:0
@@ -3321,7 +3321,7 @@ msgstr ""
 #: code:addons/base/ir/ir_model.py:359
 #, python-format
 msgid "Cannot rename column to %s, because that column already exists!"
-msgstr ""
+msgstr "Get ekki endurnefnt dálk í %s, þar sem hann er þegar til!"
 
 #. module: base
 #: view:ir.attachment:0
@@ -3401,7 +3401,7 @@ msgstr ""
 #. module: base
 #: view:res.partner.event:0
 msgid "General Description"
-msgstr ""
+msgstr "Almenn lýsing"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_config_simple_view_form
@@ -3507,7 +3507,7 @@ msgstr ""
 #: field:workflow,name:0
 #: field:workflow.activity,name:0
 msgid "Name"
-msgstr ""
+msgstr "Nafn"
 
 #. module: base
 #: help:ir.actions.act_window,multi:0
@@ -3663,7 +3663,7 @@ msgstr ""
 #. module: base
 #: model:ir.ui.menu,name:base.menu_product
 msgid "Products"
-msgstr ""
+msgstr "Vörur"
 
 #. module: base
 #: field:ir.actions.act_window,domain:0
@@ -3799,7 +3799,7 @@ msgstr ""
 #. module: base
 #: field:wizard.ir.model.menu.create,name:0
 msgid "Menu Name"
-msgstr ""
+msgstr "Nafn valmyndar"
 
 #. module: base
 #: view:ir.module.module:0
@@ -3836,7 +3836,7 @@ msgstr ""
 #: model:ir.model,name:base.model_res_partner_address
 #: view:res.partner.address:0
 msgid "Partner Addresses"
-msgstr ""
+msgstr "Heimilisfang viðskiptaaðila"
 
 #. module: base
 #: help:ir.model.fields,translate:0
@@ -3890,7 +3890,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:base.action_partner_addess_tree
 #: view:res.partner:0
 msgid "Partner Contacts"
-msgstr ""
+msgstr "Tengiliðir viðskiptaaðila"
 
 #. module: base
 #: field:base.module.update,add:0
@@ -3948,7 +3948,7 @@ msgstr ""
 #. module: base
 #: view:ir.actions.server:0
 msgid "Email Configuration"
-msgstr ""
+msgstr "Stillingar tölvupósts"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_cron
@@ -4385,7 +4385,7 @@ msgstr ""
 #. module: base
 #: field:res.partner.category,complete_name:0
 msgid "Full Name"
-msgstr ""
+msgstr "Fullt nafn"
 
 #. module: base
 #: view:base.module.configuration:0
@@ -4401,7 +4401,7 @@ msgstr ""
 #: code:addons/base/module/module.py:238
 #, python-format
 msgid "The name of the module must be unique !"
-msgstr ""
+msgstr "Nafn viðbótarinnar verður að vera einstakt!"
 
 #. module: base
 #: model:res.country,name:base.mz
@@ -4430,13 +4430,13 @@ msgstr ""
 #: view:res.partner:0
 #: field:res.partner,user_id:0
 msgid "Salesman"
-msgstr ""
+msgstr "Sölumaður"
 
 #. module: base
 #: field:res.partner,address:0
 #: view:res.partner.address:0
 msgid "Contacts"
-msgstr ""
+msgstr "Tengiliðir"
 
 #. module: base
 #: code:addons/orm.py:3704
@@ -4623,7 +4623,7 @@ msgstr ""
 #. module: base
 #: sql_constraint:res.country:0
 msgid "The name of the country must be unique !"
-msgstr ""
+msgstr "Nafn landsins verður að vera einstakt"
 
 #. module: base
 #: model:ir.actions.act_window,help:base.action_country_state
@@ -4704,7 +4704,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:base.action_partner_address_form
 #: model:ir.ui.menu,name:base.menu_partner_address_form
 msgid "Addresses"
-msgstr ""
+msgstr "Heimilsföng"
 
 #. module: base
 #: model:res.country,name:base.mm
@@ -4860,7 +4860,7 @@ msgstr ""
 #. module: base
 #: field:partner.massmail.wizard,email_from:0
 msgid "Sender's email"
-msgstr ""
+msgstr "Tölvupóstfang sendanda"
 
 #. module: base
 #: field:ir.default,field_name:0
@@ -4932,7 +4932,7 @@ msgstr ""
 #: selection:res.partner.address,type:0
 #: selection:res.partner.title,domain:0
 msgid "Contact"
-msgstr ""
+msgstr "Tengiliður"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_ui_menu
@@ -5224,7 +5224,7 @@ msgstr ""
 #. module: base
 #: field:ir.attachment,name:0
 msgid "Attachment Name"
-msgstr ""
+msgstr "Nafn viðhengis"
 
 #. module: base
 #: field:base.language.export,data:0
@@ -5328,7 +5328,7 @@ msgstr ""
 #. module: base
 #: help:res.country,name:0
 msgid "The full name of the country."
-msgstr ""
+msgstr "Fullt nafn landsins"
 
 #. module: base
 #: selection:ir.actions.server,state:0
@@ -5363,6 +5363,7 @@ msgstr ""
 msgid ""
 "New column name must still start with x_ , because it is a custom field!"
 msgstr ""
+"Nýtt dálka heiti verður að byrja á x_, þar sem þetta er \"custom\" svæði!"
 
 #. module: base
 #: view:ir.model.access:0
@@ -5798,7 +5799,7 @@ msgstr ""
 #. module: base
 #: field:base.language.import,name:0
 msgid "Language Name"
-msgstr ""
+msgstr "Nafn tungumáls"
 
 #. module: base
 #: selection:ir.property,type:0
@@ -6110,7 +6111,7 @@ msgstr ""
 #. module: base
 #: field:ir.actions.report.xml,report_name:0
 msgid "Service Name"
-msgstr ""
+msgstr "Nafn þjónustu"
 
 #. module: base
 #: model:res.country,name:base.pn
@@ -6132,7 +6133,7 @@ msgstr ""
 #. module: base
 #: field:res.users,name:0
 msgid "User Name"
-msgstr ""
+msgstr "Notandanafn"
 
 #. module: base
 #: view:ir.sequence:0
@@ -6186,7 +6187,7 @@ msgstr ""
 #: model:ir.ui.menu,name:base.menu_sale_config_sales
 #: model:ir.ui.menu,name:base.menu_sales
 msgid "Sales"
-msgstr ""
+msgstr "Sala"
 
 #. module: base
 #: field:ir.actions.server,child_ids:0
@@ -6248,7 +6249,7 @@ msgstr ""
 #. module: base
 #: field:res.partner,email:0
 msgid "E-mail"
-msgstr ""
+msgstr "Tölvupóstur"
 
 #. module: base
 #: selection:ir.module.module,license:0
@@ -6296,7 +6297,7 @@ msgstr ""
 #: view:res.bank:0
 #: view:res.partner.address:0
 msgid "Address"
-msgstr ""
+msgstr "Heimilisfang"
 
 #. module: base
 #: field:ir.module.module,latest_version:0
@@ -6333,7 +6334,7 @@ msgstr ""
 #: view:res.partner:0
 #: view:res.partner.address:0
 msgid "Postal Address"
-msgstr ""
+msgstr "Póstfang"
 
 #. module: base
 #: field:res.company,parent_id:0
@@ -6395,7 +6396,7 @@ msgstr ""
 #. module: base
 #: field:ir.model.fields,model:0
 msgid "Object Name"
-msgstr ""
+msgstr "Heiti hlutar"
 
 #. module: base
 #: help:ir.actions.server,srcmodel_id:0
@@ -6544,7 +6545,7 @@ msgstr ""
 #: field:res.company,email:0
 #: field:res.users,user_email:0
 msgid "Email"
-msgstr ""
+msgstr "Tölvupóstfang"
 
 #. module: base
 #: field:res.users,action_id:0
@@ -6570,7 +6571,7 @@ msgstr ""
 #: model:ir.ui.menu,name:base.next_id_73
 #: model:ir.ui.menu,name:base.reporting_menu
 msgid "Reporting"
-msgstr ""
+msgstr "Skýrslur"
 
 #. module: base
 #: model:res.country,name:base.tg
@@ -6722,7 +6723,7 @@ msgstr ""
 #: field:ir.actions.server,name:0
 #: field:ir.actions.url,name:0
 msgid "Action Name"
-msgstr ""
+msgstr "Heiti aðgerðar"
 
 #. module: base
 #: model:ir.actions.act_window,help:base.action_res_users
@@ -6830,7 +6831,7 @@ msgstr ""
 #. module: base
 #: help:res.users,name:0
 msgid "The new user's real name, used for searching and most listings"
-msgstr ""
+msgstr "Rétt nafn nýs notanda, notað fyrir leitir og birtingar á listum."
 
 #. module: base
 #: code:addons/osv.py:150
@@ -6932,7 +6933,7 @@ msgstr ""
 #. module: base
 #: field:ir.module.module,shortdesc:0
 msgid "Short Description"
-msgstr ""
+msgstr "Stutt lýsing"
 
 #. module: base
 #: field:ir.actions.act_window,context:0
@@ -7396,7 +7397,7 @@ msgstr ""
 #. module: base
 #: sql_constraint:res.groups:0
 msgid "The name of the group must be unique !"
-msgstr ""
+msgstr "Nafn hópsins verður að vera einstakt"
 
 #. module: base
 #: view:ir.sequence:0
@@ -7523,7 +7524,7 @@ msgstr ""
 #: model:ir.ui.menu,name:base.menu_emails
 #: model:ir.ui.menu,name:base.menu_mail_gateway
 msgid "Emails"
-msgstr ""
+msgstr "Tölvupóstföng"
 
 #. module: base
 #: model:res.country,name:base.cd
@@ -7636,7 +7637,7 @@ msgstr ""
 #. module: base
 #: view:partner.massmail.wizard:0
 msgid "Send Email"
-msgstr ""
+msgstr "Senda tölvupóst"
 
 #. module: base
 #: field:res.users,menu_id:0
@@ -7875,7 +7876,7 @@ msgstr ""
 #. module: base
 #: field:res.partner.canal,name:0
 msgid "Channel Name"
-msgstr ""
+msgstr "Nafn rásar"
 
 #. module: base
 #: view:res.lang:0
@@ -7977,7 +7978,7 @@ msgstr ""
 #: model:ir.ui.menu,name:base.menu_config_address_book
 #: model:ir.ui.menu,name:base.menu_procurement_management_supplier
 msgid "Address Book"
-msgstr ""
+msgstr "Tengiliðaskrá"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_sequence_type
@@ -8112,7 +8113,7 @@ msgstr ""
 #. module: base
 #: help:multi_company.default,name:0
 msgid "Name it to easily find a record"
-msgstr ""
+msgstr "Nafn til að finna færslu auðveldlega"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.grant_menu_access
@@ -8481,7 +8482,7 @@ msgstr ""
 #: field:res.partner,phone:0
 #: field:res.partner.address,phone:0
 msgid "Phone"
-msgstr ""
+msgstr "Sími"
 
 #. module: base
 #: field:ir.cron,active:0
@@ -8672,7 +8673,7 @@ msgstr ""
 #: field:base.language.export,name:0
 #: field:ir.attachment,datas_fname:0
 msgid "Filename"
-msgstr ""
+msgstr "Skráarheiti"
 
 #. module: base
 #: field:ir.model,access_ids:0
@@ -8703,7 +8704,7 @@ msgstr ""
 #. module: base
 #: field:res.groups,full_name:0
 msgid "Group Name"
-msgstr ""
+msgstr "Nafn hóps"
 
 #. module: base
 #: model:res.country,name:base.bh
@@ -8893,7 +8894,7 @@ msgstr ""
 #: field:ir.model.fields,complete_name:0
 #: field:ir.ui.menu,complete_name:0
 msgid "Complete Name"
-msgstr ""
+msgstr "Fullt nafn"
 
 #. module: base
 #: field:ir.values,object:0
@@ -8910,7 +8911,7 @@ msgstr ""
 #. module: base
 #: field:res.partner.category,name:0
 msgid "Category Name"
-msgstr ""
+msgstr "Nafn flokks"
 
 #. module: base
 #: model:res.partner.category,name:base.res_partner_category_15
@@ -8950,7 +8951,7 @@ msgstr ""
 #: code:addons/base/ir/ir_model.py:357
 #, python-format
 msgid "Can only rename one column at a time!"
-msgstr ""
+msgstr "Aðeins er hægt að endurnefna einn dálk í einu."
 
 #. module: base
 #: selection:ir.translation,type:0
