--- a/bin/addons/base/i18n/is.po
+++ b/bin/addons/base/i18n/is.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2012-05-12 23:06+0000\n"
+"PO-Revision-Date: 2012-05-13 14:14+0000\n"
 "Last-Translator: Bjorn Thor <Unknown>\n"
 "Language-Team: Icelandic <is@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2012-05-13 04:54+0000\n"
-"X-Generator: Launchpad (build 15225)\n"
+"X-Launchpad-Export-Date: 2012-05-14 04:54+0000\n"
+"X-Generator: Launchpad (build 15238)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -34,7 +34,7 @@ msgstr "Sankti Helena"
 #. module: base
 #: view:ir.actions.report.xml:0
 msgid "Other Configuration"
-msgstr ""
+msgstr "Aðrar stillingar"
 
 #. module: base
 #: selection:ir.property,type:0
@@ -99,7 +99,7 @@ msgstr ""
 #. module: base
 #: field:ir.actions.server,wkf_model_id:0
 msgid "Workflow On"
-msgstr ""
+msgstr "Verkflæði á"
 
 #. module: base
 #: field:ir.actions.act_window,display_menu_tip:0
@@ -118,6 +118,8 @@ msgid ""
 "You can not write in this document (%s) ! Be sure your user belongs to one "
 "of these groups: %s."
 msgstr ""
+"Þú getur ekki skrifað í þetta skjal(%s) ! Vertu viss um að notandinn þinn "
+"tilheyri eftirfarandi hópum: %s."
 
 #. module: base
 #: help:ir.model.fields,domain:0
@@ -150,6 +152,8 @@ msgid ""
 "Properties of base fields cannot be altered in this manner! Please modify "
 "them through Python code, preferably through a custom addon!"
 msgstr ""
+"Eigindi grunn svæða geta ekki verið breytt á þennan hátt! Vinsamlegast "
+"breytið þeim í gegnum Python kóða, helst í gegnum auka viðbót!"
 
 #. module: base
 #: code:addons/osv.py:129
@@ -171,7 +175,7 @@ msgstr "Svasíland"
 #: code:addons/orm.py:4206
 #, python-format
 msgid "created."
-msgstr ""
+msgstr "Búið til."
 
 #. module: base
 #: model:res.partner.category,name:base.res_partner_category_woodsuppliers0
@@ -255,6 +259,8 @@ msgid ""
 "Save this document to a %s file and edit it with a specific software or a "
 "text editor. The file encoding is UTF-8."
 msgstr ""
+"Vistið þetta skjal sem %s skrá and og breytið með viðeigandi texta ritil. "
+"Skjáar  \"encoding\" er UTF-8."
 
 #. module: base
 #: sql_constraint:res.lang:0
@@ -264,12 +270,12 @@ msgstr "Nafn tungumáls verður að vera einstakt !"
 #. module: base
 #: selection:res.request,state:0
 msgid "active"
-msgstr ""
+msgstr "virkt"
 
 #. module: base
 #: field:ir.actions.wizard,wiz_name:0
 msgid "Wizard Name"
-msgstr ""
+msgstr "Nafn Leiðbeinanda"
 
 #. module: base
 #: code:addons/orm.py:2526
@@ -300,7 +306,7 @@ msgstr ""
 #. module: base
 #: view:ir.actions.todo:0
 msgid "Config Wizard Steps"
-msgstr ""
+msgstr "Stilla skref leiðbeinanda"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_ui_view_sc
@@ -324,13 +330,13 @@ msgstr "Hópur"
 #: field:ir.translation,name:0
 #: field:res.partner.bank.type.field,name:0
 msgid "Field Name"
-msgstr ""
+msgstr "Heiti svæðis"
 
 #. module: base
 #: wizard_view:server.action.create,init:0
 #: wizard_field:server.action.create,init,type:0
 msgid "Select Action Type"
-msgstr ""
+msgstr "Velja gerð aðgerðar"
 
 #. module: base
 #: model:res.country,name:base.tv
@@ -365,6 +371,8 @@ msgid ""
 "You can not remove the admin user as it is used internally for resources "
 "created by OpenERP (updates, module installation, ...)"
 msgstr ""
+"Ekki er hægt að fjarlægja admin notanda þar sem hann er notaður af OpenERP "
+"kerfinu fyrir uppfærslur, viðbætur o.s.f.r."
 
 #. module: base
 #: model:res.country,name:base.gf
@@ -387,6 +395,8 @@ msgid ""
 "If you check this, then the second time the user prints with same attachment "
 "name, it returns the previous report."
 msgstr ""
+"Ef hakað er í þetta, þá mun koma sama skýrsla sem viðhengi og áður  þegar "
+"prentað er í annað sinn."
 
 #. module: base
 #: code:addons/orm.py:904
@@ -423,7 +433,7 @@ msgstr "Kólumbía"
 #. module: base
 #: view:ir.module.module:0
 msgid "Schedule Upgrade"
-msgstr ""
+msgstr "Áætla Uppfærslu tíma"
 
 #. module: base
 #: code:addons/orm.py:1390
@@ -466,7 +476,7 @@ msgstr ""
 #: view:ir.actions.wizard:0
 #: model:ir.ui.menu,name:base.menu_ir_action_wizard
 msgid "Wizards"
-msgstr ""
+msgstr "Leiðbeinendur"
 
 #. module: base
 #: model:res.partner.category,name:base.res_partner_category_miscellaneoussuppliers0
@@ -487,12 +497,12 @@ msgstr ""
 #. module: base
 #: view:res.config.users:0
 msgid "New User"
-msgstr ""
+msgstr "Nýjan notanda"
 
 #. module: base
 #: view:base.language.export:0
 msgid "Export done"
-msgstr ""
+msgstr "Útflutningi lokið"
 
 #. module: base
 #: view:ir.model:0
@@ -519,7 +529,7 @@ msgstr "Jórdanía"
 #. module: base
 #: view:ir.module.module:0
 msgid "Certified"
-msgstr ""
+msgstr "Viðurkennt"
 
 #. module: base
 #: model:res.country,name:base.er
@@ -566,7 +576,7 @@ msgstr ""
 #. module: base
 #: field:res.partner,title:0
 msgid "Partner Form"
-msgstr ""
+msgstr "Viðskipta aðila Form"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -598,7 +608,7 @@ msgstr ""
 #. module: base
 #: model:ir.model,name:base.model_base_language_import
 msgid "Language Import"
-msgstr ""
+msgstr "Flytja inn tungumál"
 
 #. module: base
 #: model:ir.model,name:base.model_res_config_users
@@ -623,7 +633,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.pg
 msgid "Papua New Guinea"
-msgstr ""
+msgstr "Papúa Nýja-Gínea"
 
 #. module: base
 #: help:ir.actions.report.xml,report_type:0
@@ -659,7 +669,7 @@ msgstr "Spánn"
 #. module: base
 #: model:ir.ui.menu,name:base.menu_translation_export
 msgid "Import / Export"
-msgstr ""
+msgstr "flytja inn / flytja út"
 
 #. module: base
 #: help:ir.actions.act_window,domain:0
@@ -679,6 +689,8 @@ msgid ""
 "Groups are used to define access rights on objects and the visibility of "
 "screens and menus"
 msgstr ""
+"Hópar eru notaðir til að skilgreina aðgangsréttindi að hlutum kerfis og  "
+"valmynda."
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -2159,7 +2171,7 @@ msgstr ""
 #. module: base
 #: field:res.partner.address,birthdate:0
 msgid "Birthdate"
-msgstr ""
+msgstr "Fæðingardagur"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_partner_title_contact
@@ -2324,7 +2336,7 @@ msgstr ""
 #. module: base
 #: selection:publisher_warranty.contract,state:0
 msgid "Unvalidated"
-msgstr ""
+msgstr "Óstaðfest"
 
 #. module: base
 #: model:ir.ui.menu,name:base.next_id_9
@@ -2718,7 +2730,7 @@ msgstr ""
 #. module: base
 #: view:publisher_warranty.contract:0
 msgid "Validate"
-msgstr ""
+msgstr "Staðfesta"
 
 #. module: base
 #: field:ir.actions.todo,restart:0
@@ -3005,7 +3017,7 @@ msgstr ""
 #. module: base
 #: view:base.module.upgrade:0
 msgid "The selected modules have been updated / installed !"
-msgstr ""
+msgstr "Valdar viðbætur hafa verið uppfærðar/settar upp !"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -3033,7 +3045,7 @@ msgstr ""
 #. module: base
 #: model:ir.actions.act_window,name:base.action_config_user_form
 msgid "Create Users"
-msgstr ""
+msgstr "Stofna notendur"
 
 #. module: base
 #: model:ir.model,name:base.model_res_partner_title
@@ -3295,7 +3307,7 @@ msgstr ""
 #. module: base
 #: view:base.module.upgrade:0
 msgid "System update completed"
-msgstr ""
+msgstr "Kerfis uppfærlu lokið"
 
 #. module: base
 #: selection:res.request,state:0
@@ -3310,7 +3322,7 @@ msgstr ""
 #: field:res.partner.event,date:0
 #: field:res.request,date_sent:0
 msgid "Date"
-msgstr ""
+msgstr "Dags."
 
 #. module: base
 #: field:ir.actions.report.xml,report_sxw:0
@@ -3729,7 +3741,7 @@ msgstr ""
 #. module: base
 #: field:ir.model.data,date_init:0
 msgid "Init Date"
-msgstr ""
+msgstr "Byrjunar dags."
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -4343,7 +4355,7 @@ msgstr ""
 #. module: base
 #: view:publisher_warranty.contract:0
 msgid "Refresh Validation Dates"
-msgstr ""
+msgstr "Uppfæra dags. staðfestinga"
 
 #. module: base
 #: field:ir.model.fields,ttype:0
@@ -5030,7 +5042,7 @@ msgstr ""
 #. module: base
 #: field:res.company,user_ids:0
 msgid "Accepted Users"
-msgstr ""
+msgstr "Samþykktir notendur"
 
 #. module: base
 #: field:ir.ui.menu,web_icon_data:0
@@ -5133,7 +5145,7 @@ msgstr ""
 #. module: base
 #: help:ir.cron,nextcall:0
 msgid "Next planned execution date for this scheduler"
-msgstr ""
+msgstr "Næsta áætlaða keyrslu dags. fyrir þennan keyrslustjóra"
 
 #. module: base
 #: help:res.config.users,view:0
@@ -5187,7 +5199,7 @@ msgstr ""
 #. module: base
 #: model:ir.ui.menu,name:base.menu_view_base_module_update
 msgid "Update Modules List"
-msgstr ""
+msgstr "Uppfæra lista yfir Viðbætur"
 
 #. module: base
 #: code:addons/base/module/module.py:295
@@ -5434,7 +5446,7 @@ msgstr ""
 #. module: base
 #: field:res.log,create_date:0
 msgid "Creation Date"
-msgstr ""
+msgstr "Búin til þann"
 
 #. module: base
 #: view:ir.translation:0
@@ -5539,7 +5551,7 @@ msgstr ""
 #. module: base
 #: field:ir.attachment,create_date:0
 msgid "Date Created"
-msgstr ""
+msgstr "Búinn til þann"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_actions_todo
@@ -5708,7 +5720,7 @@ msgstr ""
 #: field:res.groups,users:0
 #: view:res.users:0
 msgid "Users"
-msgstr ""
+msgstr "Notendur"
 
 #. module: base
 #: field:ir.module.module,published_version:0
@@ -6064,7 +6076,7 @@ msgstr ""
 #. module: base
 #: field:res.request,create_date:0
 msgid "Created Date"
-msgstr ""
+msgstr "Búið til þann"
 
 #. module: base
 #: help:ir.actions.server,loop_action:0
@@ -6113,6 +6125,8 @@ msgstr ""
 msgid ""
 "The group that a user must have to be authorized to validate this transition."
 msgstr ""
+"Hópur sem notandinn tilheyrir verður að hafa réttindi til að staðfesta þessa "
+"aðgerð."
 
 #. module: base
 #: constraint:res.users:0
@@ -6338,7 +6352,7 @@ msgstr ""
 #. module: base
 #: view:base.module.update:0
 msgid "Module update result"
-msgstr ""
+msgstr "Niðurstaða uppfærslu viðbóta"
 
 #. module: base
 #: view:workflow.activity:0
@@ -6401,6 +6415,9 @@ msgid ""
 "for the currency: %s \n"
 "at the date: %s"
 msgstr ""
+"Ekkert gengi fundið \n"
+"fyrir gengi: %s \n"
+"dags.: %s"
 
 #. module: base
 #: model:ir.actions.act_window,help:base.action_ui_view_custom
@@ -6520,7 +6537,7 @@ msgstr ""
 #: code:addons/orm.py:2692
 #, python-format
 msgid "ValidateError"
-msgstr ""
+msgstr "StaðfestingarVilla"
 
 #. module: base
 #: view:base.module.import:0
@@ -6655,7 +6672,7 @@ msgstr ""
 #. module: base
 #: view:base.module.upgrade:0
 msgid "Start update"
-msgstr ""
+msgstr "Byrja uppfærslu"
 
 #. module: base
 #: code:addons/base/publisher_warranty/publisher_warranty.py:144
@@ -6766,7 +6783,7 @@ msgstr ""
 #. module: base
 #: model:ir.actions.act_window,name:base.action_view_base_module_update
 msgid "Module Update"
-msgstr ""
+msgstr "Viðbótar uppfærsla"
 
 #. module: base
 #: code:addons/base/module/wizard/base_module_upgrade.py:95
@@ -6965,7 +6982,7 @@ msgstr ""
 #. module: base
 #: field:ir.cron,nextcall:0
 msgid "Next Execution Date"
-msgstr ""
+msgstr "Næsta keyrslu dags."
 
 #. module: base
 #: help:multi_company.default,field_id:0
@@ -6975,7 +6992,7 @@ msgstr ""
 #. module: base
 #: field:res.request.history,date_sent:0
 msgid "Date sent"
-msgstr ""
+msgstr "Dags. sent"
 
 #. module: base
 #: view:ir.sequence:0
@@ -7184,7 +7201,7 @@ msgstr ""
 #. module: base
 #: field:publisher_warranty.contract,date_start:0
 msgid "Starting Date"
-msgstr ""
+msgstr "Upphafs dagsetning"
 
 #. module: base
 #: help:res.partner,website:0
@@ -7573,7 +7590,7 @@ msgstr ""
 #: view:base.module.upgrade:0
 #: field:base.module.upgrade,module_info:0
 msgid "Modules to update"
-msgstr ""
+msgstr "Viðbætur til að uppfæra"
 
 #. module: base
 #: help:ir.actions.server,sequence:0
@@ -7637,7 +7654,7 @@ msgstr ""
 #. module: base
 #: model:ir.model,name:base.model_base_module_update
 msgid "Update Module"
-msgstr ""
+msgstr "Uppfæra Viðbót"
 
 #. module: base
 #: view:ir.model.fields:0
@@ -7759,6 +7776,9 @@ msgid ""
 "loading a new language it becomes available as default interface language "
 "for users and partners."
 msgstr ""
+"Þessi leiðbendandi aðstoðar þig við að bæta inn nýju tungumáli í OpenERP. "
+"Aftur að hafa hlaðið inn tungumálinu verður það aðgengilegt sem tungumál "
+"fyrir notendur og viðskipta aðila."
 
 #. module: base
 #: field:ir.actions.server,subject:0
@@ -7923,7 +7943,7 @@ msgstr ""
 #. module: base
 #: view:base.module.update:0
 msgid "Click on Update below to start the process..."
-msgstr ""
+msgstr "Smelltu á Uppfæra að neðan tl að byrja keyrsluna...."
 
 #. module: base
 #: model:res.country,name:base.ir
@@ -8081,7 +8101,7 @@ msgstr ""
 #. module: base
 #: view:base.module.update:0
 msgid "Update Module List"
-msgstr ""
+msgstr "Uppfæra lista yfir Viðbætur"
 
 #. module: base
 #: code:addons/base/res/res_users.py:755
@@ -8236,7 +8256,7 @@ msgstr ""
 #: view:base.module.upgrade:0
 #: view:base.update.translations:0
 msgid "Update"
-msgstr ""
+msgstr "Uppfærsla"
 
 #. module: base
 #: model:ir.actions.report.xml,name:base.ir_module_reference_print
@@ -8305,7 +8325,7 @@ msgstr ""
 #. module: base
 #: sql_constraint:res.users:0
 msgid "You can not have two users with the same login !"
-msgstr ""
+msgstr "Ekki er hægt að hafa tvo nendur með sama Notandanafni !"
 
 #. module: base
 #: model:ir.model,name:base.model_multi_company_default
@@ -8514,7 +8534,7 @@ msgstr "Sími"
 #: view:workflow.instance:0
 #: view:workflow.workitem:0
 msgid "Active"
-msgstr ""
+msgstr "Virkur"
 
 #. module: base
 #: model:res.country,name:base.th
@@ -9096,7 +9116,7 @@ msgstr "Viðskipta aðila flokkar"
 #. module: base
 #: view:base.module.upgrade:0
 msgid "System Update"
-msgstr ""
+msgstr "Kerfis uppfærsla"
 
 #. module: base
 #: selection:ir.translation,type:0
